[gd_scene load_steps=30 format=2]

[ext_resource path="res://Objects/Pillar.tscn" type="PackedScene" id=1]
[ext_resource path="res://Objects/Torch.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/ClingCups.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/OneSidedUV.tscn" type="PackedScene" id=4]
[ext_resource path="res://Objects/MiniaturPyramide.tscn" type="PackedScene" id=5]
[ext_resource path="res://Objects/CrystalDoor.tscn" type="PackedScene" id=6]
[ext_resource path="res://Objects/BigWallWithArc.tscn" type="PackedScene" id=7]
[ext_resource path="res://Objects/StoneWall.tscn" type="PackedScene" id=8]
[ext_resource path="res://Assets/Materials/cliff_jagged_NRM_1k.png" type="Texture" id=9]
[ext_resource path="res://Assets/Materials/cliff_jagged_COL_1k.png" type="Texture" id=10]
[ext_resource path="res://Objects/HalfWall.tscn" type="PackedScene" id=11]
[ext_resource path="res://Prototyping/PyramideStatic.gd" type="Script" id=12]
[ext_resource path="res://Objects/Anubis.tscn" type="PackedScene" id=13]
[ext_resource path="res://LightBakes/BigRoom.lmbake" type="BakedLightmapData" id=14]
[ext_resource path="res://Objects/FireStand.tscn" type="PackedScene" id=15]
[ext_resource path="res://Objects/BigRoomLayout.tscn" type="PackedScene" id=16]
[ext_resource path="res://Objects/PyramidStand.tscn" type="PackedScene" id=17]
[ext_resource path="res://Objects/Table.tscn" type="PackedScene" id=18]
[ext_resource path="res://Objects/GoldenCup.tscn" type="PackedScene" id=19]
[ext_resource path="res://Prototyping/BigRoom.gd" type="Script" id=20]
[ext_resource path="res://Logic/TextTrigger.tscn" type="PackedScene" id=21]
[ext_resource path="res://Objects/Brimby.tscn" type="PackedScene" id=22]
[ext_resource path="res://Objects/BrokenPillar.tscn" type="PackedScene" id=23]

[sub_resource type="BoxShape" id=11]
extents = Vector3( 2.16573, 0.791591, 2.07406 )

[sub_resource type="SpatialMaterial" id=9]
albedo_texture = ExtResource( 10 )
normal_enabled = true
normal_scale = 1.0
normal_texture = ExtResource( 9 )
uv1_scale = Vector3( 3, 2, 1 )

[sub_resource type="ArrayMesh" id=10]
resource_name = "OneSidedUV_Cube"
lightmap_size_hint = Vector2( 326, 278 )
surfaces/0 = {
"aabb": AABB( -1, -0.0343422, -1, 2, 0.0686843, 2.00001 ),
"array_data": PoolByteArray( 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 63, 129, 0, 116, 1, 37, 39, 203, 59, 31, 58, 134, 59, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 191, 129, 0, 116, 1, 13, 45, 218, 59, 172, 38, 97, 59, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 63, 129, 0, 116, 1, 170, 38, 207, 59, 31, 58, 97, 59, 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 191, 129, 0, 116, 1, 232, 44, 214, 59, 172, 38, 134, 59, 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 191, 127, 127, 64, 94, 232, 44, 214, 59, 172, 38, 156, 59, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 191, 127, 127, 189, 93, 13, 45, 109, 59, 40, 56, 193, 59, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 191, 127, 127, 67, 93, 13, 45, 218, 59, 172, 38, 193, 59, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 191, 127, 127, 187, 92, 238, 44, 113, 59, 40, 56, 156, 59, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 191, 127, 0, 140, 127, 238, 44, 113, 59, 17, 35, 75, 59, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 63, 127, 0, 140, 127, 170, 38, 97, 59, 6, 58, 38, 59, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 191, 127, 0, 140, 127, 13, 45, 109, 59, 17, 35, 38, 59, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 63, 127, 0, 140, 127, 62, 39, 101, 59, 6, 58, 75, 59, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 63, 0, 0, 65, 32, 62, 39, 101, 59, 172, 38, 215, 59, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 63, 0, 0, 189, 33, 170, 38, 207, 59, 40, 56, 252, 59, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 63, 0, 0, 67, 33, 170, 38, 97, 59, 172, 38, 252, 59, 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 63, 0, 0, 187, 34, 37, 39, 203, 59, 40, 56, 215, 59, 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 191, 0, 129, 127, 120, 232, 44, 214, 59, 237, 55, 93, 23, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 63, 0, 129, 127, 120, 62, 39, 101, 59, 72, 22, 243, 58, 0, 0, 128, 63, 96, 170, 12, 189, 0, 0, 128, 191, 0, 129, 127, 120, 238, 44, 113, 59, 72, 22, 93, 23, 0, 0, 128, 191, 96, 170, 12, 189, 0, 0, 128, 63, 0, 129, 127, 120, 37, 39, 203, 59, 237, 55, 243, 58, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 191, 0, 127, 0, 63, 0, 0, 0, 0, 9, 56, 36, 36, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 63, 0, 127, 0, 63, 255, 59, 255, 59, 252, 59, 16, 59, 0, 0, 128, 191, 96, 170, 12, 61, 0, 0, 128, 191, 0, 127, 0, 63, 0, 0, 0, 60, 252, 59, 36, 36, 0, 0, 128, 63, 96, 170, 12, 61, 0, 0, 128, 63, 0, 127, 0, 63, 255, 59, 0, 0, 9, 56, 16, 59 ),
"array_index_data": PoolByteArray( 0, 0, 1, 0, 2, 0, 0, 0, 3, 0, 1, 0, 4, 0, 5, 0, 6, 0, 4, 0, 7, 0, 5, 0, 8, 0, 9, 0, 10, 0, 8, 0, 11, 0, 9, 0, 12, 0, 13, 0, 14, 0, 12, 0, 15, 0, 13, 0, 16, 0, 17, 0, 18, 0, 16, 0, 19, 0, 17, 0, 20, 0, 21, 0, 22, 0, 20, 0, 23, 0, 21, 0 ),
"blend_shape_data": [  ],
"format": 2194743,
"index_count": 36,
"material": SubResource( 9 ),
"primitive": 4,
"skeleton_aabb": [  ],
"vertex_count": 24
}

[sub_resource type="CubeMesh" id=12]

[sub_resource type="BoxShape" id=13]
extents = Vector3( 1.52993, 1, 1.55977 )

[sub_resource type="SphereShape" id=14]
radius = 0.646037

[node name="BigRoom" type="Room"]
script = ExtResource( 20 )

[node name="CrystalDoor" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0367854, 1.70141, -11.6414 )

[node name="BakedLightmap" type="BakedLightmap" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.502992, 3.36055, 0.00471735 )
extents = Vector3( 12.8974, 5.02034, 12.8536 )
quality = 2
light_data = ExtResource( 14 )

[node name="BigRoomLayout" parent="." instance=ExtResource( 16 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.10181, 0 )

[node name="Walls" type="Spatial" parent="."]

[node name="HalfWallGood1" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, 2.35626, 1.88602, 11.5812 )

[node name="HalfWallGood2" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, -2.88523, 1.84685, 11.5679 )

[node name="HalfWallGood5" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, 2.35626, 5.90636, 11.5812 )

[node name="HalfWallGood7" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, 2.35626, 5.90636, 11.5812 )

[node name="HalfWallGood6" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, -2.88523, 5.86719, 11.5679 )

[node name="HalfWallGood3" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, -2.81104, 1.82671, -11.5504 )

[node name="HalfWallGood4" parent="Walls" instance=ExtResource( 11 )]
transform = Transform( 1.13977, 0, 0, 0, 1, 0, 0, 0, 1, 2.51581, 1.86548, -11.5917 )

[node name="StoneWall9" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.1956, 1.86913, 9.40947 )

[node name="StoneWall16" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.98487, 1.86913, 11.5695 )

[node name="StoneWall20" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0142, 1.86913, 11.5803 )

[node name="StoneWall21" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.58635, 1.86913, 11.5796 )

[node name="StoneWall22" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53583, 1.87406, 11.6044 )

[node name="StoneWall29" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.96692, 1.86913, -11.5613 )

[node name="StoneWall30" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0142, 1.86913, -11.5613 )

[node name="StoneWall31" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.74646, 1.86913, -11.6037 )

[node name="StoneWall32" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.73186, 1.86913, -11.6242 )

[node name="StoneWall10" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.231, 1.86913, 5.41156 )

[node name="StoneWall11" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.231, 1.86913, 1.44442 )

[node name="StoneWall17" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2605, 1.86913, -2.59155 )

[node name="StoneWall18" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2794, 1.86913, -6.63093 )

[node name="StoneWall19" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2858, 1.86913, -10.6522 )

[node name="StoneWall23" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.7764, 1.86913, 9.40947 )

[node name="StoneWall24" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.741, 1.86913, 5.41156 )

[node name="StoneWall25" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.741, 1.86913, 1.44442 )

[node name="StoneWall26" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.7115, 1.86913, -2.59155 )

[node name="StoneWall27" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.6926, 1.86913, -6.63093 )

[node name="StoneWall28" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.6862, 1.86913, -10.6522 )

[node name="StoneWall12" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.1956, 5.86032, 9.40947 )

[node name="StoneWall33" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.98487, 5.86032, 11.5695 )

[node name="StoneWall34" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0142, 5.86032, 11.5803 )

[node name="StoneWall35" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.58635, 5.86032, 11.5796 )

[node name="StoneWall36" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53583, 5.86525, 11.6044 )

[node name="StoneWall51" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.29013, 5.86525, 11.6044 )

[node name="StoneWall37" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.958, 5.86, -11.5613 )

[node name="StoneWall52" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.93921, 5.86032, -11.5528 )

[node name="StoneWall50" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.839, 5.86032, -11.5992 )

[node name="StoneWall38" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10.0142, 5.86032, -11.5613 )

[node name="StoneWall39" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 9.80778, 5.86032, -11.5924 )

[node name="StoneWall40" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.80659, 5.86032, -11.6358 )

[node name="StoneWall13" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.231, 5.86032, 5.41156 )

[node name="StoneWall14" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.231, 5.86032, 1.44442 )

[node name="StoneWall41" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2605, 5.86032, -2.59155 )

[node name="StoneWall42" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2794, 5.86032, -6.63093 )

[node name="StoneWall43" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, -12.2858, 5.86032, -10.6522 )

[node name="StoneWall44" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.7764, 5.86032, 9.40947 )

[node name="StoneWall45" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.741, 5.86032, 5.41156 )

[node name="StoneWall46" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.741, 5.86032, 1.44442 )

[node name="StoneWall47" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.7115, 5.86032, -2.59155 )

[node name="StoneWall48" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.6926, 5.86032, -6.63093 )

[node name="StoneWall49" parent="Walls" instance=ExtResource( 8 )]
transform = Transform( -0.00938978, 0, 0.999956, 0, 1, 0, -0.999956, 0, -0.00938978, 11.6862, 5.86032, -10.6522 )

[node name="BigWallWithArc2" parent="Walls" instance=ExtResource( 7 )]
transform = Transform( 0.999997, 0, 0, 0, 0.999997, 0, 0, 0, 0.999997, -0.283497, -0.107927, 11.6002 )

[node name="LightsAndCrystals" type="Spatial" parent="."]

[node name="Torch" parent="LightsAndCrystals" instance=ExtResource( 2 )]
transform = Transform( -0.999203, -0.002707, 0.0398306, -2.96391e-09, 0.997698, 0.0678063, -0.0399225, 0.0677522, -0.996903, 4.02292, 2.02878, -11.5045 )

[node name="Torch3" parent="LightsAndCrystals" instance=ExtResource( 2 )]
transform = Transform( -0.999203, -0.002707, 0.0398306, -2.96391e-09, 0.997698, 0.0678063, -0.0399225, 0.0677522, -0.996903, -4.32488, 2.02878, -11.3309 )

[node name="Torch2" parent="LightsAndCrystals" instance=ExtResource( 2 )]
transform = Transform( -4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -12.1028, 1.23247, -1.11185 )

[node name="Torch4" parent="LightsAndCrystals" instance=ExtResource( 2 )]
transform = Transform( -0.0366437, 0, 0.999328, 0, 1, 0, -0.999328, 0, -0.0366437, 11.5087, 1.23247, -4.67062 )

[node name="Torch5" parent="LightsAndCrystals" instance=ExtResource( 2 )]
transform = Transform( -0.0366437, 0, 0.999328, 0, 1, 0, -0.999328, 0, -0.0366437, 11.5221, 1.23247, 4.43555 )

[node name="FireStand" parent="LightsAndCrystals" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.53193, 0.990113, 5.51294 )

[node name="FireStand2" parent="LightsAndCrystals" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.55342, 0.889147, 5.4714 )

[node name="FireStand3" parent="LightsAndCrystals" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 5.53547, 0.877675, -5.60134 )

[node name="FireStand4" parent="LightsAndCrystals" instance=ExtResource( 15 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -5.57366, 0.976072, -5.54132 )

[node name="Props" type="Spatial" parent="."]

[node name="GoldenCup" parent="Props" instance=ExtResource( 19 )]
transform = Transform( 0.998056, 0.0623202, 0, -0.0623202, 0.998056, 0, 0, 0, 1, -9.44694, 0.917852, -2.32416 )

[node name="GoldenCup2" parent="Props" instance=ExtResource( 19 )]
transform = Transform( 0.996643, -0.0818689, 0, 0.0818689, 0.996643, 0, 0, 0, 1, -9.20174, 0.899736, -1.2918 )

[node name="Table" parent="Props" instance=ExtResource( 18 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -8.67225, -0.121049, -1.8441 )

[node name="miniatur_pyramide_finished" parent="Props" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.579524, -0.133835, -0.533751 )

[node name="PyramidStand" parent="Props" instance=ExtResource( 17 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0471069, -1.72767, 0.287374 )

[node name="ClingCups" parent="Props" instance=ExtResource( 3 )]
transform = Transform( -0.0497388, 0, 0.998762, 0, 1, 0, -0.998762, 0, -0.0497388, -7.92023, 0.917479, -1.36573 )

[node name="StaticBody" type="StaticBody" parent="Props" groups=["interactable"]]
script = ExtResource( 12 )
pyramide_path = NodePath("../miniatur_pyramide_finished")

[node name="CollisionShape" type="CollisionShape" parent="Props/StaticBody"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0.276191 )
shape = SubResource( 11 )

[node name="Room2Pyramid1_TriggerManually" parent="Props/StaticBody" instance=ExtResource( 21 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 39.3833, 4.95508, -26.6665 )
text = "Long before his death a large pyramid complex was built in Seti’s name."
duration = 5.7

[node name="Room2Pyramid2_TriggerManually" parent="Props/StaticBody" instance=ExtResource( 21 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 39.3833, 4.95508, -26.6665 )
text = "The marriage to his wife Anck-Su-Namun took place there."
duration = 5.0

[node name="Ceilings" type="Spatial" parent="."]

[node name="Ceiling" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, -8.31296, 4.8462, 5.42082 )

[node name="Cube" parent="Ceilings/Ceiling" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 6.25278e-13, 0, 0, 1, 0, -0.966174, 5.96046e-08 )
mesh = SubResource( 10 )

[node name="Ceiling2" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, -0.17049, 4.8462, 5.42082 )

[node name="Cube" parent="Ceilings/Ceiling2" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 6.25278e-13, 0, 0, 1, 0, -0.966174, 5.96046e-08 )
mesh = SubResource( 10 )

[node name="Ceiling3" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4.16003, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, 8.0309, 4.8462, 5.42082 )

[node name="Cube" parent="Ceilings/Ceiling3" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 5.68434e-13, 0, 0, 1, 0, -0.966174, 2.43161e-08 )
mesh = SubResource( 10 )

[node name="Ceiling4" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, -8.31296, 4.8462, -6.53755 )

[node name="Cube" parent="Ceilings/Ceiling4" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 5.68434e-13, 0, 0, 1, 0, -0.966174, 2.43161e-08 )
mesh = SubResource( 10 )

[node name="Ceiling5" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, -0.17049, 4.8462, -6.53755 )

[node name="Cube" parent="Ceilings/Ceiling5" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 5.68434e-13, 0, 0, 1, 0, -0.966174, 2.43161e-08 )
mesh = SubResource( 10 )

[node name="Ceiling6" parent="Ceilings" instance=ExtResource( 4 )]
transform = Transform( 4.16003, 0, 0, 0, -1, 9.05975e-07, 0, -1.50996e-07, -6, 8.0309, 4.8462, -6.53755 )

[node name="Cube" parent="Ceilings/Ceiling6" index="0"]
transform = Transform( 1.02795, 0, 0, 0, 1, 5.68434e-13, 0, 0, 1, 0, -0.966174, 2.43161e-08 )
mesh = SubResource( 10 )

[node name="Pillars" type="Spatial" parent="."]

[node name="Pillar" parent="Pillars" instance=ExtResource( 1 )]
transform = Transform( 1.55808, 0, 0, 0, 1.23243, 0, 0, 0, 1.55808, 8.64832, -0.0184861, -5.13245 )

[node name="Pillar2" parent="Pillars" instance=ExtResource( 1 )]
transform = Transform( 1.55808, 0, 0, 0, 1.23243, 0, 0, 0, 1.55808, 8.46132, -0.0184861, 5.12625 )

[node name="Pillar3" parent="Pillars" instance=ExtResource( 1 )]
transform = Transform( 1.55808, 0, 0, 0, 1.23243, 0, 0, 0, 1.55808, -8.41023, -0.0184857, -5.13245 )

[node name="Pillar4" parent="Pillars" instance=ExtResource( 1 )]
transform = Transform( 1.55808, 0, 0, 0, 1.23243, 0, 0, 0, 1.55808, -8.59723, -0.0184861, 5.12625 )
visible = false

[node name="BrokenPillar" parent="Pillars" instance=ExtResource( 23 )]
transform = Transform( -6.77527e-08, 0, -1.55, 0, 1.23, 0, 1.55, 0, -6.77527e-08, -8.5974, 0, 5.11026 )

[node name="ReflectionProbe" type="ReflectionProbe" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.23114, 0.0719352 )
extents = Vector3( 15.4753, 9.04306, 13.5347 )
origin_offset = Vector3( -0.99, 0, 0 )

[node name="room-bound" type="MeshInstance" parent="."]
transform = Transform( 12.7609, 0, 0, 0, 9.43611, 0, 0, 0, 13.1001, 0, 4.60045, 0 )
visible = false
mesh = SubResource( 12 )
material/0 = null

[node name="EntryRamp" type="StaticBody" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="EntryRamp"]
transform = Transform( 1, 0, 0, 0, 0.0173114, -0.115837, 0, 0.00578697, 0.34652, -0.0852009, -0.300509, 12.529 )
shape = SubResource( 13 )

[node name="Anubis" parent="." instance=ExtResource( 13 )]
transform = Transform( -8.63217e-09, 0, -0.197481, 0, 0.197481, 0, 0.197481, 0, -8.63217e-09, 10.643, -0.160816, -0.476417 )

[node name="CrystalDispenser" type="Area" parent="Anubis"]

[node name="CollisionShape" type="CollisionShape" parent="Anubis/CrystalDispenser"]
transform = Transform( 34.1737, 0, 6.37225e-08, 0, 15.2073, 0, 6.37244e-08, 0, 35.6315, 0.386562, 0, -4.19159 )
shape = SubResource( 14 )

[node name="CrystalPos" type="Position3D" parent="Anubis"]
transform = Transform( -2.21345e-07, 0, 5.06378, 0, 5.06378, 0, -5.06378, 0, -2.21345e-07, 0.108723, 14.4599, 4.51023 )

[node name="Room2Anubis_TriggerManually" parent="." instance=ExtResource( 21 )]
transform = Transform( 0.707107, 0, 0.707107, 0, 1, 0, -0.707107, 0, 0.707107, 39.9628, 4.82125, -27.2003 )
text = "His highpriest Imhotep was hired to maintain good relations to the gods."
duration = 7.0

[node name="Brimby" parent="." instance=ExtResource( 22 )]
transform = Transform( 0.25273, 0, 0, 0, 0.25273, 0, 0, 0, 0.25273, -1.76537, 0.89089, 5.32591 )

[node name="Brimby2" parent="." instance=ExtResource( 22 )]
transform = Transform( 0.25273, 0, 0, 0, 0.25273, 0, 0, 0, 0.25273, 1.85042, 0.89089, 5.32591 )

[node name="Brimby3" parent="." instance=ExtResource( 22 )]
transform = Transform( -0.25273, 0, 3.52876e-05, 0, 0.25273, 0, -3.52876e-05, 0, -0.25273, 1.76292, 0.89089, -5.35195 )

[node name="Brimby4" parent="." instance=ExtResource( 22 )]
transform = Transform( -0.25273, 0, 3.52876e-05, 0, 0.25273, 0, -3.52876e-05, 0, -0.25273, -1.88458, 0.89089, -5.48927 )

[connection signal="body_entered" from="Anubis/CrystalDispenser" to="." method="_on_CrystalDispenser_body_entered"]

[editable path="Ceilings/Ceiling"]
[editable path="Ceilings/Ceiling2"]
[editable path="Ceilings/Ceiling3"]
[editable path="Ceilings/Ceiling4"]
[editable path="Ceilings/Ceiling5"]
[editable path="Ceilings/Ceiling6"]
